# LoRA-Studio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  runpodfix.md
.github/workflows/: release.yml
src/: App.tsx  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs  forge.rs  mod.rs  pickers.rs  runpod.rs
src/components/: PageHeader.tsx
src/lib/: forge.ts  runpod.ts  themes.ts
src/lib/runpod/: api.ts  gpu.ts  index.ts  kohya.ts  ssh.ts  types.ts
src/pages/: BatchGenerator.tsx  CaptionEditor.tsx  CharacterSetup.tsx  GeneratorSettings.tsx  RunPodLauncher.tsx  SettingsPage.tsx  ShotList.tsx
