[package]
name = "lora-studio"
version = "0.1.0"
description = "LoRA Studio - Character LoRA training workflow"
authors = ["Jonathan Vanderpol"]
edition = "2021"

[lib]
name = "lora_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zip = "0.6"
tar = "0.4"
flate2 = "1"
walkdir = "2"
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.21"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
